--- a/views/survey_form.erb
+++ b/views/survey_form.erb
@@ -1,1 +1,24 @@
-<p>Hello</p>
+<h2>This Is the Start of the Survey</h2>
+
+<p>Can you solve the puzzle below? Take your time and think about what is being asked of you.</p>
+
+<div>
+  <% if @answer == "fail" %>
+    <p><%= "This is must be embarassing for you, but you answered incorrectly. Feel free to try again but I think we both know you aren't a fit here..." %></p>
+  <% end %>
+</div>
+
+<div>
+  <a href="/survey_form?answer=fail"><button type="submit" class="button" name="survey">Do no click, click button to the bottom</button></a>
+</div>
+<div>
+  <a href="/survey_form?answer=fail"><button type="submit" class="button" name="survey">Do no click, click button to the right</button></a>
+  <a href="/survey_form?answer=fail"><button type="submit" class="button" name="survey">Do no click, click button to the left</button></a>
+</div>
+<div>
+  <a href="/survey_form?answer=fail"><button type="submit" class="button" name="survey">Do no click, click button to the top</button></a>
+</div>
+
+<div>
+  <a href="/hire_this_brogrammer" style="color:white">You solved the puzzle! Good for you!</a>
+</div>
