Made some style changes

--- a/views/survey.erb
+++ b/views/survey.erb
@@ -1,4 +1,4 @@
 <h2>Congratulations on Taking Initiative to Become a Better YOU!</h2>
-<p>You have decided that you want the blessed opportunity to join our great company. Can't say that we blame you. Lots of people have come knocking at our door for the chance to make the world a better place, to really make a difference. That is why our glorious overlords are excited at the potential of claiming another soul. Click the button below to begin the lengthy survey that weeds out the pretenders from the brogrammers. Be prepared to spend the next 45 minutes solving logic puzzles and brain teasers while discovering who you really are. Are you brogrammer enough?</p>
+<p>You have decided that you want the blessed opportunity to join our great company. Can't say that we blame you. Lots of people come knocking at our door for the chance to make the world a better place and to really make a difference. Click the button below to begin our lengthy survey. Be prepared to spend the next 45 minutes solving logic puzzles and brain teasers while discovering who you really are. Are you brogrammer enough?</p>
 
-<a href="/survey_form"><button type="submit" class="button" name="survey">Take Grueling Survey!1!</button></a>
+<a href="/survey_form"><button type="submit" class="button" name="survey">Take Grueling Survey!!!</button></a>
