Added quitter route/view for the quitters

--- a/views/survey_form.erb
+++ b/views/survey_form.erb
@@ -13,6 +13,10 @@
   <a href="/survey_form?answer=fail"><button type="submit" class="button" name="survey">Do not click, click button to the left</button></a>
 </div>
 
+<div style="margin: 10px;">
+  <a href="/quitter">I can't handle this. I'm out!</a>
+</div>
+
 <div style="position: absolute; bottom: 0px;">
   <a href="/hire_this_brogrammer" style="color:white">You solved the puzzle! Good for you!</a>
 </div>
